--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-message [messages]="(messages | async)" (select)="select(message)"></app-message>
+  <app-message [messages]="(messages | async)" (select)="select($event)" (unselect)="unselect($event)"></app-message>
   <div class="col-lg-12" style="margin: 10px 0;">
       <div class="input-group">
 
