--- a/client/src/app/components/chatroom/chatroom.component.html
+++ b/client/src/app/components/chatroom/chatroom.component.html
@@ -6,24 +6,24 @@
         <input class="form-control form-control-sm" type="text" placeholder="Search...">
       </nav>
       <div id="thread-body">
-        <ng-container >
-          <div id="user-in-thread" >
-            <div id="thread-main" >
+        <ng-container *ngIf="(messageThread$ | async)" >
+          <div id="user-in-thread" *ngFor="let thread of (messageThread$ | async).messageThread" (click)="chooseUserFromMessageThread(thread)">
+            <div id="thread-main">
               <div id="user-image">
-                <img src="assets/images/Asset 3.svg" >
-
+                <img *ngIf="thread.chatBetween[0].avatar.length == 0" src='./assets/images/Asset 3.svg'>
+                <img *ngIf="thread.chatBetween[0].avatar.length" src='{{thread.chatBetween[0].avatar.avatar}}'>
               </div>
               <div class="wrapper">
-                <div id="username"></div>
-                <div id="last-message"></div>
+                <div id="username">{{thread.chatBetween[0].username}}</div>
+                <div id="last-message">{{thread.lastMessage}}</div>
               </div>
             </div>
             <ng-container>
-              <div id="unread-messages" >
+              <div id="unread-messages">
                 <span class="badge badge-info"></span>
               </div>
             </ng-container>
-           </div>
+          </div>
         </ng-container>
 
 
@@ -32,36 +32,33 @@
     <div id="central-column">
 
       <nav id="navbar-center" class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="">
+        <a class="navbar-brand">
+          {{ currentUser?.username }}
         </a>
       </nav>
-      <div id="chat-box">
-        <ng-container >
-          <div id="message-by-friend" >
-            <div id="text"></div>
-            <div id="recieved-time"></div>
+      <div id="chat-box" *ngIf="chosenUser?.messageThread">
+        <ng-container *ngFor="let message of chosenUser.messageThread.messages">
+          <div id="message-by-friend" *ngIf="message.sender == chosenUser.user._id">
+            <div id="text">{{message.text}}</div>
+            <div id="recieved-time">{{message.sentAt | date : "H:mm"}}</div>
           </div>
-          <div id="message-by-me" >
-            <div id="text"></div>
-            <div id="sent-time"></div>
+          <div id="message-by-me" *ngIf="message.sender != chosenUser.user._id">
+            <div id="text">{{message.text}}</div>
+            <div id="sent-time">{{message.sentAt | date : "H:mm"}}</div>
           </div>
         </ng-container>
-        <div id="message-by-me">
-          <div id="text"></div>
-          <div id="sent-time"></div>
-        </div>
       </div>
       <div id="message-bar">
         <form [formGroup]="formMessage" (submit)="sendMessage()">
           <div class="input-group">
-            <input type="text"  class="form-control" placeholder="Message..." aria-label="Search for..." autofocus name="message" formControlName="message" >
+            <input type="text" class="form-control" placeholder="Message..." aria-label="Search for..." autofocus name="message" formControlName="message">
             <span class="input-group-btn">
               <button class="btn btn-secondary" type="button" (click)="sendMessage()">Send</button>
             </span>
           </div>
         </form>
       </div>
-      <div id="hint">
+      <div id="hint" *ngIf="!chosenUser?.messageThread">
         <h4>Please, select user to begin chatting</h4>
       </div>
 
@@ -69,7 +66,7 @@
     <div id="right-column">
 
       <nav id="navbar-right" class="navbar navbar-dark bg-dark">
-        <button type="button" name="button"  data-toggle="modal" data-target="#contactModal">Add contacts</button>
+        <button type="button" name="button" data-toggle="modal" data-target="#contactModal">Add contacts</button>
       </nav>
       <div class="modal" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -87,7 +84,8 @@
               <form [formGroup]="formContact" (submit)="addContact()">
                 <div class="form-group">
                   <label class="col-form-label" for="formGroupExampleInput">Enter username</label>
-                  <input name="username" formControlName="username" aria-describedby="usernameHelp" type="text" class="form-control" id="formGroupExampleInput" placeholder="Username...">
+                  <input name="username" formControlName="username" aria-describedby="usernameHelp" type="text" class="form-control" id="formGroupExampleInput"
+                    placeholder="Username...">
                   <small id="usernameHelp" class="form-text text-muted">Please, enter a user that registered</small>
                 </div>
                 <hr>
@@ -101,8 +99,8 @@
         </div>
       </div>
       <div id="contact-body">
-        <ng-container *ngIf="profile.userData.contactThread">
-          <div id="user-in-contact" *ngFor="let contact of profile.userData.contactThread.usersInContactThread" (click)="chooseUser(contact)">
+        <ng-container *ngIf="(contactThread$ | async)">
+          <div id="user-in-contact" *ngFor="let contact of (contactThread$ | async).contactThread" (click)="chooseUserFromContactThread(contact)">
             <div id="user-contact-image">
               <img *ngIf="contact.avatar.length == 0" src='./assets/images/Asset 5.svg'>
               <img *ngIf="contact.avatar.length" src='{{contact.avatar}}'>
