--- a/client/src/app/components/chatroom/chatroom.component.css
+++ b/client/src/app/components/chatroom/chatroom.component.css
@@ -1,16 +1,19 @@
-#navbar-left, #navbar-center, #navbar-right{
+#navbar-left,
+#navbar-center,
+#navbar-right {
   top: 0;
   padding: 0;
   width: 50%;
   position: fixed;
   height: 6vh;
-  z-index: 1000
+  z-index: 1000;
 }
-#navbar-center{
+#navbar-center {
   color: white;
   text-transform: capitalize;
 }
-#navbar-left, #navbar-right{
+#navbar-left,
+#navbar-right {
   width: 25%;
 }
 #navbar-left input {
@@ -26,14 +29,14 @@
   display: flex;
   justify-content: flex-end;
 }
-#navbar-right button{
+#navbar-right button {
   border: 0;
   padding: 1vh 3vh;
   margin-right: 1vh;
   font-size: 2vh;
 }
 
-#central-column{
+#central-column {
   width: 50%;
   /*padding-bottom: 6vh;*/
   display: -webkit-flex;
@@ -41,50 +44,55 @@
   display: flex;
   flex-direction: column-reverse;
 }
-#chat-box{
+#chat-box {
   padding: 6vh 0;
 }
-#left-column, #right-column{
+#left-column,
+#right-column {
   width: 25%;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
 }
-#central-column a{
+#central-column a {
   padding: 1vh 3vh;
   margin: 0;
   font-size: 3vh;
 }
-#central-column, #right-column, #left-column{
+#central-column,
+#right-column,
+#left-column {
   height: 100vh;
   overflow-y: auto;
 }
-#message-bar{
+#message-bar {
   position: fixed;
   bottom: 0;
   width: 50%;
 }
 
-#message-bar input{
+#message-bar input {
   padding: 2vh 5vh;
   border: 0.1vh solid #ccc;
   height: 6vh;
   font-size: 2vh;
   border-radius: 0px;
 }
-#message-bar button{
-  background-color: #343A40;
+#message-bar button {
+  background-color: #343a40;
   border: 0.1vh solid #ccc;
   padding: 0 5vh;
   font-size: 2vh;
   border-radius: 0px;
 }
-#contact-body, #thread-body{
+#contact-body,
+#thread-body {
   padding: 6vh 0 0;
   height: 94vh;
 }
-#contact-body, #thread-body{
+#contact-body,
+#thread-body {
   height: 100vh;
 }
-#user-in-thread{
+#user-in-thread {
   box-sizing: border-box;
   display: -webkit-flex;
   display: -ms-flex;
@@ -97,18 +105,18 @@
   border-left: 0;
   border-right: 0;
 }
-#thread-main{
+#thread-main {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
 }
-#user-image img{
+#user-image img {
   margin: 0.5vh;
   display: block;
   height: 9vh;
   object-fit: cover;
 }
-#thread-main .wrapper{
+#thread-main .wrapper {
   box-sizing: border-box;
   padding: 1vh;
 }
@@ -119,7 +127,7 @@
   line-height: 3vh;
   font-weight: 600;
 }
-#last-message{
+#last-message {
   height: 2.2vh;
   font-size: 1.8vh;
   line-height: 2vh;
@@ -135,38 +143,52 @@
   width: 100%;
 }
 
-#user-in-contact{
+#user-in-contact {
   box-sizing: border-box;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  border: 0.1vh solid #ccc;
+  border-bottom: 0.1vh solid #ccc;
   height: 10vh;
   width: 100%;
-  padding: 0 3%;
+  padding-left: 3%;
   border-left: 0;
   border-right: 0;
 }
-#user-in-contact .wrapper{
+#user-in-contact .wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
   box-sizing: border-box;
-  padding: 1vh;
+  padding: 1vh 0;
 }
 
-#user-contact-image img{
+#user-contact-image img {
   margin: 0.5vh;
   display: block;
   height: 9vh;
   object-fit: contain;
 }
-#username-contact{
+#username-contact {
+  width: 100%;
   height: 3vh;
   font-size: 2vh;
   overflow: hidden;
   line-height: 3vh;
   font-weight: 600;
 }
+#online-status {
+  display: block;
+  font-size: 1.8vh;
+  text-align: center;
+  color: white; 
+  background-color: #17A2B8;
+  height: 3.3vh;
+  width: 20%;
+}
 
-#message-by-friend{
+#message-by-friend {
   position: relative;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -179,7 +201,7 @@
   padding: 1%;
   font-size: 2.3vh;
 }
-#message-by-friend::before{
+#message-by-friend::before {
   content: "";
   position: absolute;
   top: 100%;
@@ -191,15 +213,15 @@
   margin-top: -2vh;
   margin-left: -2vh;
 }
-#recieved-time{
+#recieved-time {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
   justify-content: flex-end;
-  color: #999
+  color: #999;
 }
 
-#message-by-me{
+#message-by-me {
   position: relative;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -212,7 +234,7 @@
   padding: 1%;
   font-size: 2.3vh;
 }
-#message-by-me::before{
+#message-by-me::before {
   content: "";
   position: absolute;
   top: 100%;
@@ -224,7 +246,7 @@
   margin-top: -2vh;
   margin-right: -2vh;
 }
-#sent-time{
+#sent-time {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
@@ -232,13 +254,13 @@
   color: #999;
   font-size: 2vh;
 }
-#actions{
+#actions {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
   justify-content: space-between;
 }
-#hint{
+#hint {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
