Bug: Reactive Forms Module prevents html form making requests

--- a/client/src/app/components/chatroom/chatroom.component.html
+++ b/client/src/app/components/chatroom/chatroom.component.html
@@ -43,7 +43,7 @@
                 <span id="avatar-modal-close" aria-hidden="true">&times;</span>
               </button>
             </div>
-            <form enctype="multipart/form-data" method="post" action="user/changeAvatar/" [formGroup]="formAvatar" (ngSubmit)="avatarFormSubmitted()">
+            <form action="http://localhost:4200/user/changeAvatar" method="post" enctype="multipart/form-data"  (ngSubmit)="avatarFormSubmitted()">
               <div class="modal-body">
                 <div class="wrap">
                   <div class="main-group">
@@ -120,7 +120,7 @@
         </ng-container>
       </div>
       <div id="message-bar" *ngIf="((messages$ | async) && chosenUser?.user)">
-        <form [formGroup]="formMessage" (submit)="sendMessage()">
+        <form  (submit)="sendMessage()">
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Message..." aria-label="Search for..." autofocus name="message" formControlName="message">
             <span class="input-group-btn">
@@ -129,12 +129,33 @@
           </div>
         </form>
       </div>
-      <div id="hint" *ngIf="!((messages$ | async) && chosenUser?.user)">
+      <form action="http://localhost:8080/user/changeAvatar" name="yourForm" id="theForm" method="post">
+        <input type="file" name="fname" id="fname" />
+        <input type="submit" value="submit" />
+      </form>
+      <!-- <form action="/user/changeAvatar" method="POST" enctype="multipart/form-data" 
+        (ngSubmit)="avatarFormSubmitted()">
+        <div class="modal-body">
+          <div class="wrap">
+            <div class="main-group">
+              <label for="exampleFile">Choose images to upload (JPG, JPEG, PNG)</label>
+              <input type="file" accept=".jpg, .jpeg, .png" class="form-control-file" id="avatarImage" aria-describedby="fileHelp" name="avatarImage"
+                formControlName="avatar">
+            </div>
+            <div id="chosen-image-result"></div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Save changes</button>
+          <button id="avatar-modal-back" type="button" class="btn btn-secondary" data-dismiss="modal">Back</button>
+        </div>
+      </form> -->
+      <!-- <div id="hint" *ngIf="!((messages$ | async) && chosenUser?.user)">
         <h4 *ngIf="currentUser.data?.loaded">Please, select user to begin chatting</h4>
         <div id="token-expired" *ngIf="!currentUser.data?.loaded">
           {{currentUser.data?.message}}
         </div>
-      </div>
+      </div> -->
 
     </div>
     <div id="right-column">
@@ -152,7 +173,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <form [formGroup]="formContact" (submit)="addContact()">
+              <form  (submit)="addContact()">
                 <div class="form-group">
                   <label class="col-form-label" for="formGroupExampleInput">Enter username</label>
                   <input name="username" formControlName="username" aria-describedby="usernameHelp" type="text" class="form-control" id="formGroupExampleInput"
