--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form id='login-form' [formGroup]="formLogin" (submit)="onLoginSubmit()">
+<form id='login-form' (submit)="onLoginSubmit()">
   <div class="form-header">
     <h1>Login to your Account</h1>
   </div>
