--- a/client/src/app/components/chatroom/chatroom.component.html
+++ b/client/src/app/components/chatroom/chatroom.component.html
@@ -43,12 +43,12 @@
                 <span id="avatar-modal-close" aria-hidden="true">&times;</span>
               </button>
             </div>
-            <form [formGroup]="formAvatar" (ngSubmit)="avatarFormSubmitted()">
+            <form [formGroup]="formAvatar" (ngSubmit)="avatarFormSubmitted($event)">
               <div class="modal-body">
                 <div class="wrap">
                   <div class="main-group">
                     <label for="exampleFile">Choose images to upload (JPG, JPEG, PNG)</label>
-                    <input type="file" accept=".jpg, .jpeg, .png" class="form-control-file" id="avatarImage" aria-describedby="fileHelp" name="avatarImage"
+                    <input type="file" accept=".jpg, .jpeg, .png" class="form-control-file" id="inputAvatar" aria-describedby="fileHelp" name="inputAvatar"
                       formControlName="avatar">
                   </div>
                   <div id="chosen-image-result"></div>
@@ -120,7 +120,7 @@
         </ng-container>
       </div>
       <div id="message-bar" *ngIf="((messages$ | async) && chosenUser?.user)">
-        <form  (submit)="sendMessage()">
+        <form [formGroup]="formMessage" (submit)="sendMessage()">
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Message..." aria-label="Search for..." autofocus name="message" formControlName="message">
             <span class="input-group-btn">
@@ -173,7 +173,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <form  (submit)="addContact()">
+              <form [formGroup]="formContact" (submit)="addContact()">
                 <div class="form-group">
                   <label class="col-form-label" for="formGroupExampleInput">Enter username</label>
                   <input name="username" formControlName="username" aria-describedby="usernameHelp" type="text" class="form-control" id="formGroupExampleInput"
