--- a/client/src/app/components/chatroom/chatroom.component.css
+++ b/client/src/app/components/chatroom/chatroom.component.css
@@ -93,6 +93,11 @@
   height: 200px;
   border: 0.3px solid #D3D6D8;
 }
+#chosen-image-result img{
+  width: 180px;
+  height: 200px;
+  object-fit: cover
+}
 #avatar-example-header{
   margin: 16px 0;
   color: #333;
