--- a/client/src/app/components/chatroom/chatroom.component.css
+++ b/client/src/app/components/chatroom/chatroom.component.css
@@ -66,7 +66,7 @@
 #profile-image img{
   height: 100%;
   width: 100%;
-  background-color: rgb(185, 185, 185)
+  border: 0.3px solid #D3D6D8;
 }
 #profile-name-avatar{
   width: 60%;
