--- a/client/src/app/components/chatroom/chatroom.component.css
+++ b/client/src/app/components/chatroom/chatroom.component.css
@@ -11,139 +11,109 @@
 #navbar-left a {
   border: 0;
   padding: 0.5vh 2vh;
-  margin-left: 1vh;
+  margin: 0 1vh;
   font-size: 2vh;
   cursor: pointer;
   font-weight: bolder;
   background: #343A40;
   border: 0.2vh solid#343A40;
   color: #17A2B8;
-  transition: 0.3s ease-in-out
 }
 #navbar-left a:hover {
   border: 0.2vh solid#17A2B8;
-}
-#navbar-center {
-  color: white;
-  text-transform: capitalize;
 }
 #navbar-left,
 #navbar-right {
   width: 25%;
 }
-
-#navbar-right {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  justify-content: flex-end;
-}
-#navbar-right a {
-  border: 0;
-  padding: 0.5vh 2vh;
-  margin-right: 1vh;
-  font-size: 2vh;
-  cursor: pointer;
-  font-weight: bolder;
-  background: #343A40;
-  border: 0.2vh solid#343A40;
-  color: #17A2B8;
-  transition: 0.3s ease-in-out
-}
-
 #navbar-right a:hover {
   border: 0.2vh solid#17A2B8;
 }
-#profile-info, #chosenUser-info{
-  width: 100%;
-  display: flex;
-}
-#profile-image, #chosenUser-image {
-  max-width: 200px;
-  width: 40%;
-  height: 200px;
-}
-#profile-image img, #chosenUser-image img{
-  height: 100%;
-  width: 100%;
-  border: 0.3px solid #D3D6D8;
-}
-#profile-name-avatar, #chosenUser-name-avatar{
-  width: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding-left: 5%;
-}
-#change-avatar a{
-  display: inline-block;
-  padding: 5px 10px;
-  background-color: #343A40;
-  color: white;
-}
-.modal-body .wrap{
-  display: flex;
-}
-.modal-body form-group{
-  width: 50%;
-}
-
-#chosen-image-result{
-  margin: 0 auto;
-  width: 180px;
-  height: 200px;
-  border: 0.3px solid #D3D6D8;
-}
-#chosen-image-result img{
-  width: 180px;
-  height: 200px;
-  object-fit: cover
-}
-#avatar-example-header{
-  margin: 16px 0;
-  color: #333;
-  text-align: center;
-}
-#avatar-example-body{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  grid-auto-rows: 200px;
-  grid-gap: 10px;
-  margin: 0 auto;
-  margin: 10px;
-}
-#avatar-example{
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  transition-duration: 0.3s;
-  border: 0.3px solid #D3D6D8;
-}
-#avatar-example:hover{
-  border: 0.3px solid #96DAE5;
-  background-color: #96DAE5;
-  transform: scale(1.2, 1.2)
-}
-#avatar-example img{
-  object-fit: contain;
-}
-
 #left-column,
 #right-column {
   width: 25%;
   background-color: #f8f8f8;
-}
-#central-column a {
-  padding: 1vh 3vh;
-  margin: 0;
-  font-size: 3vh;
 }
 #central-column,
 #right-column,
 #left-column {
   height: 100vh;
   overflow-y: auto;
+}
+#contact-body,
+#message-thread-body {
+  padding: 6vh 0 0;
+  height: 94vh;
+}
+#contact-body,
+#message-thread-body {
+  height: 100vh;
+}
+
+/* ------------------ Left (message thread) --------------------*/
+
+#user-in-message-thread {
+  box-sizing: border-box;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 0.1vh solid #ccc;
+  height: 10vh;
+  width: 100%;
+  padding: 0 3%;
+  border-left: 0;
+  border-right: 0;
+}
+#message-thread-main {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+}
+#user-image img {
+  margin: 0.5vh;
+  display: block;
+  height: 9vh;
+  object-fit: cover;
+}
+#message-thread-main .wrapper {
+  box-sizing: border-box;
+  padding: 1vh;
+}
+#message-thread-username {
+  height: 3vh;
+  font-size: 2vh;
+  overflow: hidden;
+  line-height: 3vh;
+  font-weight: 600;
+}
+#last-message {
+  height: 2.2vh;
+  font-size: 1.8vh;
+  line-height: 2vh;
+  font-weight: 400;
+  overflow: hidden;
+}
+
+#unread-messages span {
+  display: block;
+  border-radius: 0;
+  font-size: 1.5vh;
+  height: 3vh;
+  width: 100%;
+}
+
+/* ------------------- Center (messages) ---------------------*/
+
+
+#navbar-center {
+  color: white;
+  text-transform: capitalize;
+}
+#central-column a {
+  padding: 1vh 3vh;
+  margin: 0;
+  font-size: 3vh;
 }
 #central-column {
   width: 50%;
@@ -198,111 +168,6 @@
   font-size: 2vh;
   border-radius: 0px;
 }
-#contact-body,
-#thread-body {
-  padding: 6vh 0 0;
-  height: 94vh;
-}
-#contact-body,
-#thread-body {
-  height: 100vh;
-}
-#user-in-thread {
-  box-sizing: border-box;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 0.1vh solid #ccc;
-  height: 10vh;
-  width: 100%;
-  padding: 0 3%;
-  border-left: 0;
-  border-right: 0;
-}
-#thread-main {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-}
-#user-image img {
-  margin: 0.5vh;
-  display: block;
-  height: 9vh;
-  object-fit: cover;
-}
-#thread-main .wrapper {
-  box-sizing: border-box;
-  padding: 1vh;
-}
-#username {
-  height: 3vh;
-  font-size: 2vh;
-  overflow: hidden;
-  line-height: 3vh;
-  font-weight: 600;
-}
-#last-message {
-  height: 2.2vh;
-  font-size: 1.8vh;
-  line-height: 2vh;
-  font-weight: 400;
-  overflow: hidden;
-}
-
-#unread-messages span {
-  display: block;
-  border-radius: 0;
-  font-size: 1.5vh;
-  height: 3vh;
-  width: 100%;
-}
-
-#user-in-contact {
-  box-sizing: border-box;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  border-bottom: 0.1vh solid #ccc;
-  height: 10vh;
-  width: 100%;
-  padding: 0 3%;
-  border-left: 0;
-  border-right: 0;
-}
-#user-in-contact .wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 1vh 0;
-}
-
-#user-contact-image img {
-  margin: 0.5vh;
-  display: block;
-  height: 9vh;
-  object-fit: contain;
-}
-#username-contact {
-  width: 100%;
-  height: 3vh;
-  font-size: 2vh;
-  overflow: hidden;
-  line-height: 3vh;
-  font-weight: 600;
-}
-#online-status {
-  display: block;
-  font-size: 1.8vh;
-  text-align: center;
-  color: white; 
-  background-color: #17A2B8;
-  height: 3.3vh;
-  padding: 0 3%;
-}
-
 #message-by-friend {
   position: relative;
   -webkit-box-sizing: border-box;
@@ -385,4 +250,183 @@
   flex-flow: column;
   justify-content: center;
   height: 94vh;
+}
+
+/* ----------------------- Right ( contact thread ) ----------------------*/
+#navbar-right {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  justify-content: flex-end;
+}
+#navbar-right a {
+  border: 0;
+  padding: 0.5vh 2vh;
+  margin-right: 1vh;
+  font-size: 2vh;
+  cursor: pointer;
+  font-weight: bolder;
+  background: #343A40;
+  border: 0.2vh solid#343A40;
+  color: #17A2B8;
+}
+#user-in-contact, #user-in-member {
+  box-sizing: border-box;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  border-bottom: 0.1vh solid #ccc;
+  height: 10vh;
+  width: 100%;
+  padding: 0 3%;
+  border-left: 0;
+  border-right: 0;
+}
+#user-in-contact .wrapper, #user-in-member .wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 1vh 0;
+}
+#user-contact-image img, #user-member-image img{
+  margin: 0.5vh;
+  display: block;
+  height: 9vh;
+  object-fit: contain;
+}
+#username-contact, #username-member {
+  width: 100%;
+  height: 3vh;
+  font-size: 2vh;
+  overflow: hidden;
+  line-height: 3vh;
+  font-weight: 600;
+}
+#online-status {
+  display: block;
+  font-size: 1.8vh;
+  text-align: center;
+  color: white; 
+  background-color: #17A2B8;
+  height: 3.3vh;
+  padding: 0 3%;
+}
+
+/* ----------------------- Avatar Modal --------------------------*/
+
+#change-avatar a{
+  display: inline-block;
+  padding: 5px 10px;
+  background-color: #343A40;
+}
+.modal-body .wrap{
+  display: flex;
+}
+.modal-body form-group{
+  width: 50%;
+}
+#chosen-image-result{
+  margin: 0 auto;
+  width: 180px;
+  height: 200px;
+  border: 0.3px solid #D3D6D8;
+}
+#chosen-image-result img{
+  width: 180px;
+  height: 200px;
+  object-fit: cover
+}
+#avatar-example-header{
+  margin: 16px 0;
+  color: #333;
+  text-align: center;
+}
+#avatar-example-body{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-auto-rows: 200px;
+  grid-gap: 10px;
+  margin: 0 auto;
+  margin: 10px;
+}
+#avatar-example{
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition-duration: 0.3s;
+  border: 0.3px solid #D3D6D8;
+}
+#avatar-example:hover{
+  border: 0.3px solid #96DAE5;
+  background-color: #96DAE5;
+  transform: scale(1.2, 1.2)
+}
+#avatar-example img{
+  object-fit: contain;
+}
+
+/* -------------------- Profile Modal ------------------------*/
+
+#profile-info, #chosenUser-info{
+  width: 100%;
+  display: flex;
+}
+#profile-image, #chosenUser-image {
+  max-width: 200px;
+  width: 40%;
+  height: 200px;
+}
+#profile-image img, #chosenUser-image img{
+  height: 100%;
+  width: 100%;
+  border: 0.3px solid #D3D6D8;
+}
+#profile-name-avatar, #chosenUser-name-avatar{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-left: 5%;
+}
+
+/*----------------------- Create group Modal --------------------------*/
+#createGroupModal .modal-dialog{
+  min-width: 80%;
+}
+#group-modal-data{
+  display: flex;
+}
+#group-avatar{
+  box-sizing: border-box;
+  padding-right: 1%;
+  width: 20%;
+}
+#group-avatar-placeholder{
+  width: 180px;
+  height: 200px;
+  border: 0.3px solid #D3D6D8;
+}
+#group-avatar-placeholder img{
+  height: 100%;
+  object-fit: cover
+}
+#group-avatar-action{
+  margin: 5vh 0;
+}
+#group-info{
+  width: 33%;
+  padding: 0 1%;
+}
+#group-members{
+  padding-left: 1%;
+  width: 47%;
+}
+#group-members-placeholder{
+  width: 100%;
+  height: 70vh;
+  margin-top: 5vh;
+  border: 0.3px solid #D3D6D8;
 }
