--- a/client/src/app/components/chatroom/chatroom.component.html
+++ b/client/src/app/components/chatroom/chatroom.component.html
@@ -4,7 +4,65 @@
 
       <nav id="navbar-left" class="navbar navbar-dark bg-dark">
         <a data-toggle="modal" data-target="#profileModal">Profile</a>
+        <a data-toggle="modal" data-target="#createGroupModal">Create group</a>
       </nav>
+      <div class="modal" id="createGroupModal" tabindex="-1" role="dialog" aria-labelledby="createGroupModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document" >
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="createGroupModalLabel">New group</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span id="group-modal-close" aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form [formGroup]="formCreateGroup">
+                <div id="group-modal-data">
+                  <div id="group-avatar">
+                    <div id="group-avatar-placeholder">
+                      <img>
+                    </div>
+                    <div id="group-avatar-action">
+                        <input type="file" name="groupAvatar" id="groupAvatar" formControlName="groupAvatar">
+                    </div>
+                  </div>
+                  <div id="group-info">
+                      <div class="form-group">
+                        <label for="groupName">Name of group</label>
+                        <input type="text" name="groupName" id="groupName" formControlName="groupName" class="form-control" placeholder="Enter name..." autofocus>
+                      </div>
+                      <div class="form-group">
+                        <label for="groupInfo">Info</label>
+                        <input type="text" name="groupInfo" id="groupInfo" formControlName="groupInfo" class="form-control" placeholder="Enter info...">
+                      </div>
+                  </div>
+                  <div id="group-members">
+                      <div class="input-group">
+                        <span class="input-group-btn">
+                          <button class="btn btn-primary" type="button">From contacts</button>
+                        </span>
+                        <input type="text" name="groupMember" id="groupMember" formControlName="groupMember" class="form-control" placeholder="Member...">
+                      </div>
+                    <div id="group-members-placeholder">
+                      <div id="member-from-contact">
+                        <div id="user-in-member" >
+                          <div id="user-member-image">
+                            <img src='./assets/images/Asset8.svg'>
+                            <!-- <img *ngIf="contact.avatar.length" src='./assets/images/{{contact.avatar}}'> -->
+                          </div>
+                          <div class="wrapper">
+                            <div id="username-member">BirBalo</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="modal" id="profileModal" tabindex="-1" role="dialog" aria-labelledby="profileModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
@@ -87,17 +145,17 @@
         </div>
       </div>
 
-      <div id="thread-body">
+      <div id="message-thread-body">
         <ng-container *ngIf="(messageThread$ | async)">
-          <div id="user-in-thread" *ngFor="let thread of (messageThread$ | async).messageThread.reverse()" (click)="chooseUserFromMessageThread(thread)">
-            <div id="thread-main">
+          <div id="user-in-message-thread" *ngFor="let thread of (messageThread$ | async).messageThread.reverse()" (click)="chooseUserFromMessageThread(thread)">
+            <div id="message-thread-main">
               <ng-container *ngFor="let user of thread.chatBetween">
                 <div id="user-image" *ngIf="user._id != currentUser.user._id">
                   <img *ngIf="user.avatar.length == 0" src='./assets/images/Asset3.svg'>
                   <img *ngIf="user.avatar.length" src='./assets/images/{{user.avatar}}'>
                 </div>
                 <div class="wrapper" *ngIf="user._id != currentUser.user._id">
-                  <div id="username">{{user.username}}</div>
+                  <div id="message-thread-username">{{user.username}}</div>
                   <div id="last-message">{{thread.lastMessage}}</div>
                 </div>
               </ng-container>
