--- a/client/src/app/components/chatroom/chatroom.component.html
+++ b/client/src/app/components/chatroom/chatroom.component.html
@@ -6,7 +6,7 @@
         <a data-toggle="modal" data-target="#profileModal">Profile</a>
         <a data-toggle="modal" data-target="#createGroupModal">Create group</a>
       </nav>
-      <div class="modal" id="createGroupModal" tabindex="-1" role="dialog" aria-labelledby="createGroupModalLabel" aria-hidden="true">
+      <div class="modal fade" id="createGroupModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog" role="document" >
           <div class="modal-content">
             <div class="modal-header">
@@ -15,12 +15,12 @@
                 <span id="group-modal-close" aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body">
-              <form [formGroup]="formCreateGroup">
+            <form [formGroup]="formCreateGroup" (ngSubmit)="groupFormSubmitted($event)" id="formCreateGroup">
+              <div class="modal-body">
                 <div id="group-modal-data">
                   <div id="group-avatar">
                     <div id="group-avatar-placeholder">
-                      <img>
+                      <img [attr.src]="(chosenGroupAvatar?.url)?(chosenGroupAvatar?.url): './assets/images/'+ 'Asset1.svg'" >
                     </div>
                     <div id="group-avatar-action">
                         <input type="file" name="groupAvatar" id="groupAvatar" formControlName="groupAvatar">
@@ -28,42 +28,85 @@
                   </div>
                   <div id="group-info">
                       <div class="form-group">
-                        <label for="groupName">Name of group</label>
+                        <label for="groupName">Name of group *</label>
                         <input type="text" name="groupName" id="groupName" formControlName="groupName" class="form-control" placeholder="Enter name..." autofocus>
                       </div>
                       <div class="form-group">
                         <label for="groupInfo">Info</label>
-                        <input type="text" name="groupInfo" id="groupInfo" formControlName="groupInfo" class="form-control" placeholder="Enter info...">
+                        <textarea form="#formCreateGroup" class="form-control" id="groupInfo" rows="3" formControlName="groupInfo"></textarea>
+                        <!-- <input type="text" name="groupInfo" id="groupInfo" formControlName="groupInfo" class="form-control" placeholder="Enter info..."> -->
                       </div>
                   </div>
                   <div id="group-members">
                       <div class="input-group">
                         <span class="input-group-btn">
-                          <button class="btn btn-primary" type="button">From contacts</button>
+                          <button class="btn btn-primary" type="button" (click)="addContactsToMembers()" >From contacts</button>
                         </span>
                         <input type="text" name="groupMember" id="groupMember" formControlName="groupMember" class="form-control" placeholder="Member...">
+                        
+                        <span class="input-group-btn">
+                          <button class="btn btn-primary" type="button" (click)="addUsernameToMembers()">Add</button>
+                        </span>
                       </div>
+                      <small id="fileHelp" class="form-text text-muted">
+                        {{groupMessage}}
+                      </small>
                     <div id="group-members-placeholder">
-                      <div id="member-from-contact">
+                      <div id="member-from-contact" *ngFor="let member of chosenMembersOfGroup">
                         <div id="user-in-member" >
                           <div id="user-member-image">
-                            <img src='./assets/images/Asset8.svg'>
+                            <img src='./assets/images/{{member.avatar}}'>
                             <!-- <img *ngIf="contact.avatar.length" src='./assets/images/{{contact.avatar}}'> -->
                           </div>
                           <div class="wrapper">
-                            <div id="username-member">BirBalo</div>
+                            <div id="username-member">{{member.username}}</div>
+                          </div>
+                          <div id="delete-member">
+                            <button type="button" class="btn btn-danger" (click)="deleteMember(member)" >Delete</button>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </form>
+              </div>
+              <div class="modal-footer">
+                <h4>{{formGroupMessage}}</h4>
+                <button type="submit" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="createGroupModalBack()">Back</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="addMemberToModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Contacts to add to group</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div id="user-in-contact" [ngClass]="{'chosenContactToMemberOfGroup': isChosen(contact) }" *ngFor='let contact of (contactThread$ | async)?.contacts | orderBy:order' (click)="chosenContactToMembers(contact)">
+                <div id="user-contact-image">
+                  <img *ngIf="contact.avatar.length == 0" src='./assets/images/Asset5.svg'>
+                  <img *ngIf="contact.avatar.length" src='./assets/images/{{contact.avatar}}'>
+                </div>
+                <div class="wrapper">
+                  <div id="username-contact">{{contact.username}}</div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" (click)="addMemberToModalSubmit()">Choose contacts</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="addMemberToModalBack()">Back</button>
             </div>
           </div>
         </div>
       </div>
-      <div class="modal" id="profileModal" tabindex="-1" role="dialog" aria-labelledby="profileModalLabel" aria-hidden="true">
+      <div class="modal fade" id="profileModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -76,8 +119,8 @@
               <div id="profile-info">
                 <div id="profile-image" *ngIf="currentUser.user">
                   <ng-container *ngIf="(currentUser?.user && currentUser?.user.avatar)">
-                    <img [attr.src]="(chosenAvatar?.url) ? (chosenAvatar?.url) : './assets/images/' + (currentUser?.user && currentUser?.user.avatar)"
-                      [ngStyle]="{'object-fit': (chosenAvatar?.type) == 'userAvatar'? 'cover':'contain'}" />
+                    <img [attr.src]="(chosenProfileAvatar?.url) ? (chosenProfileAvatar?.url) : './assets/images/' + (currentUser?.user && currentUser?.user.avatar)"
+                      [ngStyle]="{'object-fit': (chosenProfileAvatar?.type) == 'userAvatar'? 'cover':'contain'}" />
                   </ng-container>
                 </div>
                 <div id="profile-name-avatar">
@@ -95,7 +138,7 @@
           </div>
         </div>
       </div>
-      <div class="modal" id="avatarModal" tabindex="-1" role="dialog" aria-labelledby="avatarModalLabel" aria-hidden="true">
+      <div class="modal fade" id="avatarModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -109,20 +152,20 @@
                 <div class="wrap">
                   <div class="main-group">
                     <label for="exampleFile">Choose images to upload (JPG, JPEG, PNG)</label>
-                    <input type="file" accept=".jpg, .jpeg, .png" class="form-control-file" id="inputAvatar" aria-describedby="fileHelp" name="inputAvatar"
+                    <input type="file" accept=".jpg, .jpeg, .png" class="form-control-file" id="profileAvatar" aria-describedby="fileHelp" name="profileAvatar"
                       formControlName="avatar">
                   </div>
                   <div id="chosen-image-result">
                     <ng-container *ngIf="(currentUser?.user && currentUser?.user.avatar)"> 
-                      <img [attr.src]="(chosenAvatar?.url) ? (chosenAvatar?.url) : './assets/images/' + (currentUser?.user && currentUser?.user.avatar)"
-                        [ngStyle]="{'object-fit': (chosenAvatar?.type) == 'userAvatar'? 'cover':'contain'}" />
+                      <img [attr.src]="(chosenProfileAvatar?.url) ? (chosenProfileAvatar?.url) : './assets/images/' + (currentUser?.user && currentUser?.user.avatar)"
+                        [ngStyle]="{'object-fit': (chosenProfileAvatar?.type) == 'userAvatar'? 'cover':'contain'}" />
                     </ng-container>
                   </div>
                 </div>
               </div>
               <div class="modal-footer">
-                <div id="avatar-message" [ngClass]="{'text-danger': !statusAvatar?.success, 'text-primary': statusAvatar?.success}" >
-                  {{statusAvatar?.message}}
+                <div id="avatar-message" [ngClass]="{'text-danger': !statusProfileAvatar?.success, 'text-primary': statusProfileAvatar?.success}" >
+                  {{statusProfileAvatar?.message}}
                 </div>
                 <div id="avatar-action">
                   <button type="submit" class="btn btn-primary">Save changes</button>
@@ -136,7 +179,7 @@
                 <h4>Or choose from examples</h4>
               </div>
               <div id="avatar-example-body">
-                <div id="avatar-example" *ngFor="let image of defaultImages" (click)="chosenAvatarDefault(image)">
+                <div id="avatar-example" *ngFor="let image of defaultImages" (click)="chosenProfileAvatarDefault(image)">
                   <img src="./assets/images/{{image}}">
                 </div>
               </div>
@@ -224,8 +267,8 @@
             </div>
             <div class="message-icon">
               <div class="icon-wrap">
-                <img [attr.src]="(chosenAvatar?.url) ? (chosenAvatar?.url) : './assets/images/' + (currentUser?.user && currentUser?.user.avatar)"
-                  [ngStyle]="{'object-fit': (chosenAvatar?.type) == 'userAvatar'? 'cover':'contain'}" />
+                <img [attr.src]="(chosenProfileAvatar?.url) ? (chosenProfileAvatar?.url) : './assets/images/' + (currentUser?.user && currentUser?.user.avatar)"
+                  [ngStyle]="{'object-fit': (chosenProfileAvatar?.type) == 'userAvatar'? 'cover':'contain'}" />
               </div>
             </div>
           </div>
