Send message to members of a group, getting notification of new message, default avatars

--- a/client/src/app/components/chatroom/chatroom.component.css
+++ b/client/src/app/components/chatroom/chatroom.component.css
@@ -319,7 +319,8 @@
 #change-avatar a{
   display: inline-block;
   padding: 5px 10px;
-  background-color: #343A40;
+  /* background-color: #343A40; */
+  color: white;
 }
 .modal-body .wrap{
   display: flex;
